start contact redesign

--- a/index.html
+++ b/index.html
@@ -240,13 +240,9 @@
 
     <footer>
       <div id="contact" class="contact-section">
-        <div class="links">
-          <h1 class="section-title">Contact</h1>
-          <h2>Phone</h2>
-          <h2>Email</h2>
-          <h2>Socials</h2>
-          <h2>Resumé</h2>
-        </div>
+        <h1 class="section-title">Get in Touch</h1>
+        <a class="email-address" href="mailto:tg.hakes@gmail.com">tg.hakes@</a><br>
+        <a class="email-address gmail" href="mailto:tg.hakes@gmail.com">gmail.com</a>
       </div>
     </footer>
   </main>
