found way to turn on portal scene hovers

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
     <section id="about" class="about-section">
       <div class="about-graphics-container">
         <div class="about-title-container">
-          <h1 class="section-title">About</h1>
+          <h1 id="about-title" class="section-title">About</h1>
         </div>
         <div class="portal-scene">
           <div class="tay-img-box">
