outside portal scene

--- a/index.html
+++ b/index.html
@@ -215,6 +215,8 @@
             </svg>
           </a>
         </div>
+      </div>
+      <div class="portal-section">
         <div class="portal-parent">
           <svg class="triangle-portal" viewBox="0 0 602 482" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M57.6469 441.5L301 20L544.353 441.5H57.6469Z" />
