--- a/index.html
+++ b/index.html
@@ -211,10 +211,6 @@
               stroke-width="7" />
           </svg>
           <div class="portal-parent">
-            <!-- <svg class="triangle-portal" viewBox="0 0 602 482" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M57.6469 441.5L301 20L544.353 441.5H57.6469Z" />
-              <circle cx="301.5" cy="301.5" r="7.5" fill="#FF0000"/>
-            </svg> -->
             <svg class="triangle-portal" viewBox="0 0 249 216" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M1.28857 214.048L125.038 1.52923L247.21 214.959L1.28857 214.048Z" />
             </svg>
@@ -255,7 +251,7 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
-  <!-- <script src="./assets/js/script.js"></script> -->
+  <script src="./assets/js/script.js"></script>
 </body>
 
 </html>
