new perspective built svg, animations back in full

--- a/index.html
+++ b/index.html
@@ -211,8 +211,8 @@
               stroke-width="7" />
           </svg>
           <div class="portal-parent">
-            <svg class="triangle-portal" viewBox="0 0 249 216" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M1.28857 214.048L125.038 1.52923L247.21 214.959L1.28857 214.048Z" />
+            <svg class="triangle-portal" viewBox="0 0 522 92" fill="transparent" xmlns="http://www.w3.org/2000/svg">
+              <path d="M29.6673 86.5L261 5.29908L492.333 86.5H29.6673Z" />
             </svg>
           </div>
         </div>
