pass-stache project added

--- a/index.html
+++ b/index.html
@@ -75,6 +75,20 @@
       <div class="project-card">
         <div class="project-content">
           <div class="project-body">
+            <h2 class="project-title">Pass-Stache</h2>
+            <p>A powerful password management application, built with a team of 4 other developers.</p>
+          </div>
+          <div class="project-footer">
+            <a href="https://thawing-temple-09016.herokuapp.com/" target="_blank">Visit Website</a> // <a href="https://github.com/andydhpkp/pass-stache" target="_blank">GitHub
+              Repo</a>
+          </div>
+        </div>
+        <div class="project-revealer"></div>
+      </div>
+
+      <div class="project-card">
+        <div class="project-content">
+          <div class="project-body">
             <h2 class="project-title">Weather Dashboard</h2>
             <p>A one-page site built with jQuery and Bootstrap that uses the OpenWeather API to retrieve forecast data
               in specific cities. Local storage saves a search history.</p>
