jumbo icosa styles, nav margin changes

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <main>
     <section class="jumbotron">
       <h1 class="intro-text">Hey! I'm Taylor. I build interactive websites for humans.</h1>
-      <svg id="icosaTEST" class="icosahedron-svg" viewBox="0 0 407 464" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <svg class="jumbo-icosa" viewBox="0 0 407 464" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path
           d="M204 2L2 116.5M204 2L405.5 116.5M204 2L103 174M204 2L305 174M2 116.5V346M2 116.5L103 174M2 346L203.5 461.5M2 346L103 174M2 346L204 346.5M203.5 461.5L405.5 347.5M203.5 461.5L204 346.5M405.5 347.5V116.5M405.5 347.5L204 346.5M405.5 347.5L305 174M405.5 116.5L305 174M103 174L204 346.5M103 174H305M204 346.5L305 174"
           stroke-width="7" />
