--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
     </section>
 
     <footer>
-      <a onclick="backToTop()" id="backtotop-btn">
+      <a onclick="scrollToSmoothly(0, 1000)" id="backtotop-btn">
         <svg id="backtotop-icosa" viewBox="0 0 407 464" xmlns="http://www.w3.org/2000/svg">
           <path id="backtotop-frame"
             d="M203.5 461.5L405.5 347M203.5 461.5L1.99998 347M203.5 461.5L304.5 289.5M203.5 461.5L102.5 289.5M405.5 347L405.5 117.5M405.5 347L304.5 289.5M405.5 117.5L204 2.00001M405.5 117.5L304.5 289.5M405.5 117.5L304.5 117.25L203.5 117M204 2.00001L2 116M204 2.00001L203.5 117M2 116L1.99998 347M2 116L203.5 117M2 116L102.5 289.5M1.99998 347L102.5 289.5" />
@@ -287,7 +287,7 @@
         </a>
       </div>
       <h5>follow me</h5>
-      <h6 id="copyright">© 2021 Taylor Hakes All rights reserved.</h6>
+      <h6 id="copyright">© 2021 Taylor Hakes. All rights reserved.</h6>
     </footer>
   </main>
 
