--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
       </div>
     </section>
 
-    <section class="contact-section">
+    <section id="contact" class="contact-section">
       <h1 class="section-title">Get in Touch</h1>
       <div class="email-block">
         <a class="email-address" href="mailto:tg.hakes@gmail.com">hello@</a><br>
@@ -259,7 +259,7 @@
     </section>
 
     <footer>
-      <a onclick="scrollToSmoothly(0, 1000)" id="backtotop-btn">
+      <a onclick="scrollToSmoothly(0, 700)" id="backtotop-btn">
         <svg id="backtotop-icosa" viewBox="0 0 407 464" xmlns="http://www.w3.org/2000/svg">
           <path id="backtotop-frame"
             d="M203.5 461.5L405.5 347M203.5 461.5L1.99998 347M203.5 461.5L304.5 289.5M203.5 461.5L102.5 289.5M405.5 347L405.5 117.5M405.5 347L304.5 289.5M405.5 117.5L204 2.00001M405.5 117.5L304.5 289.5M405.5 117.5L304.5 117.25L203.5 117M204 2.00001L2 116M204 2.00001L203.5 117M2 116L1.99998 347M2 116L203.5 117M2 116L102.5 289.5M1.99998 347L102.5 289.5" />
