add projects, responsive updated

--- a/index.html
+++ b/index.html
@@ -87,6 +87,21 @@
           </div>
           <div class="project-revealer"></div>
         </div>
+
+        <div class="project-card">
+          <div class="project-content">
+            <div class="project-body">
+              <h2 class="project-title">Tech Blog</h2>
+              <p>Solo built full stack application/social site where users can view and create tech blog posts and interact via the comments.</p>
+            </div>
+            <div class="project-footer">
+              <a href="https://obscure-peak-50471.herokuapp.com/" target="_blank">Visit Website</a> // <a
+                href="https://github.com/SadboiTay/tech-blog" target="_blank">GitHub
+                Repo</a>
+            </div>
+          </div>
+          <div class="project-revealer"></div>
+        </div>
   
         <div class="project-card">
           <div class="project-content">
@@ -98,6 +113,20 @@
             <div class="project-footer">
               <a href="https://sadboitay.github.io/weather-dashboard/" target="_blank">Visit Website</a> // <a
                 href="https://github.com/SadboiTay/weather-dashboard" target="_blank">GitHub Repo</a>
+            </div>
+          </div>
+          <div class="project-revealer"></div>
+        </div>
+
+        <div class="project-card">
+          <div class="project-content">
+            <div class="project-body">
+              <h2 class="project-title">Git N Shape</h2>
+              <p>Health and fitness jump starter app that generates tailored workout and nutrition plans for users. Built with a team of 3 other developers.</p>
+            </div>
+            <div class="project-footer">
+              <a href="https://austinxewell.github.io/git-n-shape/" target="_blank">Visit Website</a> // <a
+                href="https://github.com/austinxewell/git-n-shape" target="_blank">GitHub Repo</a>
             </div>
           </div>
           <div class="project-revealer"></div>
@@ -129,21 +158,6 @@
             <div class="project-footer">
               <a href="https://sadboitay.github.io/work-day-scheduler/" target="_blank">Visit Website</a> // <a
                 href="https://github.com/SadboiTay/work-day-scheduler" target="_blank">GitHub Repo</a>
-            </div>
-          </div>
-          <div class="project-revealer"></div>
-        </div>
-  
-        <div class="project-card">
-          <div class="project-content">
-            <div class="project-body">
-              <h2 class="project-title">Note Taker</h2>
-              <p>Full stack application that can be used to write and save notes via a deployed server. I used Express.js
-                to build the server and connect it to the existing front-end.</p>
-            </div>
-            <div class="project-footer">
-              <a href="https://calm-badlands-94002.herokuapp.com/" target="_blank">Visit Website</a> // <a
-                href="https://github.com/SadboiTay/note-taker" target="_blank">GitHub Repo</a>
             </div>
           </div>
           <div class="project-revealer"></div>
