--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </svg>
       </section>
 
-      <section class="quote-section">
+      <section class="quote-section quote-1-section">
         <svg id="quote-1" class="quote-svg" viewBox="0 0 695 560" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path id="q1-polygon"
             d="M464.012 307.496L464.007 307.504L341.994 518.993L50.9822 15H633.01L464.012 307.496Z" />
@@ -222,13 +222,13 @@
         </div>
       </section>
 
-      <section class="quote-section">
+      <section class="quote-section quote-2-section">
         <svg id="quote-2" class="quote-svg" viewBox="0 0 658 671" fill="none" xmlns="http://www.w3.org/2000/svg">
           <text id="q2-credit" class="quote-credit" transform="translate(117.169 632.447) rotate(-30.0092)" xml:space="preserve" style="white-space: pre" font-size="36" letter-spacing="0em"><tspan x="31.168" y="34.366">-buddha</tspan></text>
-          <path id="q2-polygon-small" d="M302.159 210.852L302.166 210.856L487.983 317.997L45.5 573.346L45.5 62.6445L302.159 210.852Z" stroke="#2FC6A8" stroke-width="25"/>
-          <path id="q2-polygon-big" d="M417.747 193.811L417.754 193.815L632.994 317.993L121.5 613.336L121.5 22.6467L417.747 193.811Z" stroke="#2FC6A8" stroke-width="25"/>
-          <rect id="q2-cutter-1" class="quote-cutters" width="634" height="101" transform="matrix(-1 0 0 1 658 266)" />
-          <text id="q2-l1" class="quote-text" xml:space="preserve" style="white-space: pre" font-size="72" letter-spacing="0em"><tspan x="0.800781" y="343.232">&#x201c;WHAT WE THINK, WE BECOME&#x201d;</tspan></text>
+          <path id="q2-polygon-big" d="M632.557 317.001L121.027 612.3L120.999 21.6525L632.557 317.001Z" />
+          <path id="q2-polygon-small" d="M513.002 316.977L46.5265 47.6504L46.501 586.347L513.002 316.977Z" />
+          <rect id="q2-cutter-1" class="quote-cutters" width="634" height="101" transform="matrix(-1 0 0 1 657.996 266.002)" />
+          <text id="q2-l1" class="quote-text" xml:space="preserve" style="white-space: pre" font-size="72" letter-spacing="0em"><tspan x="0.801514" y="343.234">&#x201c;WHAT WE THINK, WE BECOME&#x201d;</tspan></text>
           </svg>
       </section>
 
