project description touchups. Nicks text gradient trick

--- a/index.html
+++ b/index.html
@@ -84,9 +84,7 @@
           <div class="project-content">
             <div class="project-body">
               <h2 class="project-title">My Portfolio Website</h2>
-              <p>A Responsive website that utilizes the power of Greensock (GSAP) & ScrollMagic powered animations,
-                largely inspired by the beautiful <a id="prashant-link" href="https://prashantsani.com/"
-                  target="_blank">portfolio design</a> of Prashant Sani.</p>
+              <p>A Responsive website that utilizes the power of Greensock (GSAP) & ScrollMagic powered animations.</p>
             </div>
             <div class="project-footer">
               <a href="#">Case Study</a> // <a href="https://github.com/SadboiTay/portfolio2.0" target="_blank">GitHub
@@ -99,8 +97,8 @@
         <div class="project-card">
           <div class="project-content">
             <div class="project-body">
-              <h2 class="project-title">Pass-Stache</h2>
-              <p>A powerful password management application, built with a team of 4 other developers.</p>
+              <h2 class="project-title">Password Management Application</h2>
+              <p>Pass-stache is a powerful password storage tool, built with a team of 4 other developers.</p>
             </div>
             <div class="project-footer">
               <a href="https://thawing-temple-09016.herokuapp.com/" target="_blank">Visit Website</a> // <a
@@ -114,9 +112,8 @@
         <div class="project-card">
           <div class="project-content">
             <div class="project-body">
-              <h2 class="project-title">Tech Blog</h2>
-              <p>Solo built full stack application/social site where users can view and create tech blog posts and
-                interact via the comments.</p>
+              <h2 class="project-title">Blog/Social Application</h2>
+              <p>Solo built, full stack site where users can view and create blog posts and interact via the comments.</p>
             </div>
             <div class="project-footer">
               <a href="https://obscure-peak-50471.herokuapp.com/" target="_blank">Visit Website</a> // <a
@@ -130,9 +127,8 @@
         <div class="project-card">
           <div class="project-content">
             <div class="project-body">
-              <h2 class="project-title">Weather Dashboard</h2>
-              <p>A one-page site built with jQuery and Bootstrap that uses the OpenWeather API to retrieve forecast data
-                in specific cities. Local storage saves a search history.</p>
+              <h2 class="project-title">Live Weather Dashboard</h2>
+              <p>A one-page site built with jQuery and Bootstrap that uses the OpenWeather API to retrieve forecast data in specific cities. Local storage saves a search history.</p>
             </div>
             <div class="project-footer">
               <a href="https://sadboitay.github.io/weather-dashboard/" target="_blank">Visit Website</a> // <a
@@ -145,9 +141,8 @@
         <div class="project-card">
           <div class="project-content">
             <div class="project-body">
-              <h2 class="project-title">Git N Shape</h2>
-              <p>Health and fitness jump starter app that generates tailored workout and nutrition plans for users.
-                Built with a team of 3 other developers.</p>
+              <h2 class="project-title">Health/Fitness Plan Application</h2>
+              <p>Git N Shape is a health and fitness jump starter app that generates tailored workout and nutrition plans for users. Built with a team of 3 other developers.</p>
             </div>
             <div class="project-footer">
               <a href="https://austinxewell.github.io/git-n-shape/" target="_blank">Visit Website</a> // <a
@@ -160,10 +155,8 @@
         <div class="project-card">
           <div class="project-content">
             <div class="project-body">
-              <h2 class="project-title">Team Profile Generator</h2>
-              <p>Quickly generate a website displaying your team of employees through a command line app built with
-                Node.js and inquirer npm. Created with a focus on object oriented programming and test driven
-                development.
+              <h2 class="project-title">Automatic Website Generator</h2>
+              <p>Quickly generate a website displaying your team of employees through a command line app built with Node.js. Created with a focus on object oriented programming and test driven development.
               </p>
             </div>
             <div class="project-footer">
@@ -177,7 +170,7 @@
         <div class="project-card">
           <div class="project-content">
             <div class="project-body">
-              <h2 class="project-title">Work Day Scheduler</h2>
+              <h2 class="project-title">Daily Calendar Application</h2>
               <p>A simple browser calendar application that allows a user to save events in local storage for each hour
                 of
                 the day.</p>
@@ -208,7 +201,7 @@
         <div class="project-card">
           <div class="project-content">
             <div class="project-body">
-              <h2 class="project-title">Code Quiz</Q></h2>
+              <h2 class="project-title">Coding Quiz Application</Q></h2>
               <p>Test your knowledgee with a timed JavaScript quiz. Wrong answers dock your time and decrease your
                 score.
               </p>
@@ -224,12 +217,19 @@
 
       <section class="quote-section quote-2-section">
         <svg id="quote-2" class="quote-svg" viewBox="0 0 658 671" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <text id="q2-credit" class="quote-credit" transform="translate(117.169 632.447) rotate(-30.0092)" xml:space="preserve" style="white-space: pre" font-size="36" letter-spacing="0em"><tspan x="31.168" y="34.366">-buddha</tspan></text>
+          <text id="q2-credit" class="quote-credit" transform="translate(117.169 632.447) rotate(-30.0092)"
+            xml:space="preserve" style="white-space: pre" font-size="36" letter-spacing="0em">
+            <tspan x="31.168" y="34.366">-buddha</tspan>
+          </text>
           <path id="q2-polygon-big" d="M632.557 317.001L121.027 612.3L120.999 21.6525L632.557 317.001Z" />
           <path id="q2-polygon-small" d="M513.002 316.977L46.5265 47.6504L46.501 586.347L513.002 316.977Z" />
-          <rect id="q2-cutter-1" class="quote-cutters" width="634" height="101" transform="matrix(-1 0 0 1 657.996 266.002)" />
-          <text id="q2-l1" class="quote-text" xml:space="preserve" style="white-space: pre" font-size="72" letter-spacing="0em"><tspan x="0.801514" y="343.234">&#x201c;WHAT WE THINK, WE BECOME&#x201d;</tspan></text>
-          </svg>
+          <rect id="q2-cutter-1" class="quote-cutters" width="634" height="101"
+            transform="matrix(-1 0 0 1 657.996 266.002)" />
+          <text id="q2-l1" class="quote-text" xml:space="preserve" style="white-space: pre" font-size="72"
+            letter-spacing="0em">
+            <tspan x="0.801514" y="343.234">&#x201c;WHAT WE THINK, WE BECOME&#x201d;</tspan>
+          </text>
+        </svg>
       </section>
 
       <section id="about" class="about-section">
