down arrow, cta btn

--- a/index.html
+++ b/index.html
@@ -45,16 +45,38 @@
     </div>
   </section>
 
+  <svg id="cta-btn" viewBox="0 0 153 174" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <path id="cta-btn-polygon"
+        d="M4.32202 127.563V45.1698L76.7006 4.02717L148.896 45.1673V128.113L76.5284 169.069L4.32202 127.563Z"
+        stroke="#AE1E4E" stroke-width="7" />
+      <text id="cta-btn-text" xml:space="preserve" style="white-space: pre"
+        letter-spacing="0em">
+        <tspan x="16.5" y="79.38">GET IN </tspan>
+        <tspan x="26.5" y="121.38">TOUCH</tspan>
+      </text>
+  </svg>
   <main>
     <div class="main-wrap">
       <section class="jumbotron">
         <h1 class="intro-text">Hey! I'm Taylor. I build interactive websites for humans.</h1>
-        <svg class="jumbo-icosa" viewBox="0 0 407 464" xmlns="http://www.w3.org/2000/svg">
-          <path
-            d="M204 2L2 116.5M204 2L405.5 116.5M204 2L103 174M204 2L305 174M2 116.5V346M2 116.5L103 174M2 346L203.5 461.5M2 346L103 174M2 346L204 346.5M203.5 461.5L405.5 347.5M203.5 461.5L204 346.5M405.5 347.5V116.5M405.5 347.5L204 346.5M405.5 347.5L305 174M405.5 116.5L305 174M103 174L204 346.5M103 174H305M204 346.5L305 174" />
-        </svg>
-      </section>
 
+        <svg class="jumbo-icosa" viewBox="0 0 393 447" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path
+            d="M217.409 20.3527L377.845 111.407L297.826 157.134L217.409 20.3527ZM282.006 159.821H111.481L196.743 14.7982L282.006 159.821ZM385.5 124.309V308.22L305.39 170.088L385.5 124.309ZM295.08 182.211L379.943 328.536L209.796 327.693L295.08 182.211ZM282.025 174.821L196.743 320.298L111.462 174.821H282.025ZM98.3624 182.135L183.634 327.596L13.0906 327.174L98.3624 182.135ZM176.108 20.3014L95.6529 157.147L15.1981 111.399L176.108 20.3014ZM204.211 342.665L364.67 343.461L203.813 434.131L204.211 342.665ZM189.211 342.61L188.813 434.096L28.3179 342.212L189.211 342.61ZM7.5 307.087V124.278L88.0498 170.079L7.5 307.087Z" />
+          <defs>
+            <linearGradient id="jumbo-icosa-gradient" x1="17.5" y1="75" x2="393" y2="391"
+              gradientUnits="userSpaceOnUse">
+              <stop stop-color="var(--Palette3)" />
+              <stop offset="0.5" stop-color="var(--Palette2)" />
+              <stop offset="1" stop-color="var(--Palette4)" />
+            </linearGradient>
+          </defs>
+        </svg>
+
+        <svg id="down-arrow" viewBox="0 0 123 135" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M69 0H54.5L54 106.5L10.5 62.5L0 73L62.5 135L122.5 73L113 62.5L69 106.5V0Z" fill="white"/>
+          </svg>
+      </section>
       <section class="quote-section quote-1-section">
         <svg id="quote-1" class="quote-svg" viewBox="0 0 695 560" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path id="q1-polygon"
@@ -113,7 +135,8 @@
           <div class="project-content">
             <div class="project-body">
               <h2 class="project-title">Blog/Social Application</h2>
-              <p>Solo built, full stack site where users can view and create blog posts and interact via the comments.</p>
+              <p>Solo built, full stack site where users can view and create blog posts and interact via the comments.
+              </p>
             </div>
             <div class="project-footer">
               <a href="https://obscure-peak-50471.herokuapp.com/" target="_blank">Visit Website</a> // <a
@@ -128,7 +151,8 @@
           <div class="project-content">
             <div class="project-body">
               <h2 class="project-title">Live Weather Dashboard</h2>
-              <p>A one-page site built with jQuery and Bootstrap that uses the OpenWeather API to retrieve forecast data in specific cities. Local storage saves a search history.</p>
+              <p>A one-page site built with jQuery and Bootstrap that uses the OpenWeather API to retrieve forecast data
+                in specific cities. Local storage saves a search history.</p>
             </div>
             <div class="project-footer">
               <a href="https://sadboitay.github.io/weather-dashboard/" target="_blank">Visit Website</a> // <a
@@ -142,7 +166,8 @@
           <div class="project-content">
             <div class="project-body">
               <h2 class="project-title">Health/Fitness Plan Application</h2>
-              <p>Git N Shape is a health and fitness jump starter app that generates tailored workout and nutrition plans for users. Built with a team of 3 other developers.</p>
+              <p>Git N Shape is a health and fitness jump starter app that generates tailored workout and nutrition
+                plans for users. Built with a team of 3 other developers.</p>
             </div>
             <div class="project-footer">
               <a href="https://austinxewell.github.io/git-n-shape/" target="_blank">Visit Website</a> // <a
@@ -156,7 +181,8 @@
           <div class="project-content">
             <div class="project-body">
               <h2 class="project-title">Automatic Website Generator</h2>
-              <p>Quickly generate a website displaying your team of employees through a command line app built with Node.js. Created with a focus on object oriented programming and test driven development.
+              <p>Quickly generate a website displaying your team of employees through a command line app built with
+                Node.js. Created with a focus on object oriented programming and test driven development.
               </p>
             </div>
             <div class="project-footer">
