apple touch icon

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
   <link rel="icon"  type="image/png" href="./favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon-180x180.png">
   <link rel="stylesheet" href="./assets/css/style.css">
   <title>T. Hakes | Web Developer</title>
 </head>
