--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
-  <link rel="icon"  type="image/png" href="./favicon-16x16.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="48x48" href="/favicon-48x48.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="stylesheet" href="./assets/css/style.css">
   <title>T. Hakes | Web Developer</title>
 </head>
@@ -17,11 +18,13 @@
     <div class="logo">
       <svg id="th-logo-svg" viewBox="0 0 404 282" fill="none" xmlns="http://www.w3.org/2000/svg">
         <g id="th">
-        <path id="h-whole (Stroke)" fill-rule="evenodd" clip-rule="evenodd" d="M291.236 1.08002V133.441L342.405 103.455L403.557 139.751V281.456L337.891 244.841V182.906L291.236 211.102V281.628L224.557 242.745V38.7846L291.236 1.08002ZM291.236 200.586L333.69 174.929L291.236 149.272V200.586ZM295.535 141.354L337.891 166.951V116.532L295.535 141.354ZM346.891 116.583V167.147L390.14 142.254L346.891 116.583ZM394.557 150.096L346.891 177.531V239.555L394.557 266.133V150.096ZM282.236 138.709V16.5085L233.557 44.0346V167.096L282.236 138.709ZM233.557 182.762V232.564L277.593 208.441L233.557 182.762ZM282.236 200.73V149.128L237.99 174.929L282.236 200.73ZM282.236 216.16L238.2 240.282L282.236 265.961V216.16Z" fill="#E3B8AA"/>
-        <path id="t-whole (Stroke)" fill-rule="evenodd" clip-rule="evenodd" d="M126.563 0V69.2822L186.825 107.525L126.563 141.396V203.786L186.774 241.451L122.035 279.013L59.5332 241.834V172.846L0 138.764L59.5332 104.681V38.7L126.563 0ZM59.5332 115.052L18.1147 138.764L59.5332 162.476V115.052ZM68.5332 162.677V114.85L112.625 138.764L68.5332 162.677ZM68.5332 172.916L117.563 146.324V203.661L68.5332 231.54V172.916ZM72.9829 239.363L117.563 265.881V214.014L72.9829 239.363ZM126.563 214.402V265.981L169.34 241.161L126.563 214.402ZM126.563 131.072L169.29 107.056L126.563 79.9415V131.072ZM117.563 69.235L68.5332 99.2582V43.8961L117.563 15.5885V69.235ZM117.563 79.7883V131.204L73.0363 107.054L117.563 79.7883Z" fill="#E3B8AA"/>
+          <path id="h-whole (Stroke)" fill-rule="evenodd" clip-rule="evenodd"
+            d="M291.236 1.08002V133.441L342.405 103.455L403.557 139.751V281.456L337.891 244.841V182.906L291.236 211.102V281.628L224.557 242.745V38.7846L291.236 1.08002ZM291.236 200.586L333.69 174.929L291.236 149.272V200.586ZM295.535 141.354L337.891 166.951V116.532L295.535 141.354ZM346.891 116.583V167.147L390.14 142.254L346.891 116.583ZM394.557 150.096L346.891 177.531V239.555L394.557 266.133V150.096ZM282.236 138.709V16.5085L233.557 44.0346V167.096L282.236 138.709ZM233.557 182.762V232.564L277.593 208.441L233.557 182.762ZM282.236 200.73V149.128L237.99 174.929L282.236 200.73ZM282.236 216.16L238.2 240.282L282.236 265.961V216.16Z" />
+          <path id="t-whole (Stroke)" fill-rule="evenodd" clip-rule="evenodd"
+            d="M126.563 0V69.2822L186.825 107.525L126.563 141.396V203.786L186.774 241.451L122.035 279.013L59.5332 241.834V172.846L0 138.764L59.5332 104.681V38.7L126.563 0ZM59.5332 115.052L18.1147 138.764L59.5332 162.476V115.052ZM68.5332 162.677V114.85L112.625 138.764L68.5332 162.677ZM68.5332 172.916L117.563 146.324V203.661L68.5332 231.54V172.916ZM72.9829 239.363L117.563 265.881V214.014L72.9829 239.363ZM126.563 214.402V265.981L169.34 241.161L126.563 214.402ZM126.563 131.072L169.29 107.056L126.563 79.9415V131.072ZM117.563 69.235L68.5332 99.2582V43.8961L117.563 15.5885V69.235ZM117.563 79.7883V131.204L73.0363 107.054L117.563 79.7883Z" />
         </g>
-        </svg>
-        
+      </svg>
+
     </div>
     <div class="menu-btn">
       <div id="burger-top" class="menu-btn_burger"></div>
@@ -67,7 +70,8 @@
     </a>
 
 
-    <svg onclick="scrollToSmoothly(900, 1000)" id="down-arrow" viewBox="0 0 123 135" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <svg onclick="scrollToSmoothly(900, 1000)" id="down-arrow" viewBox="0 0 123 135" fill="none"
+      xmlns="http://www.w3.org/2000/svg">
       <path d="M69 0H54.5L54 106.5L10.5 62.5L0 73L62.5 135L122.5 73L113 62.5L69 106.5V0Z" />
     </svg>
   </div>
@@ -322,14 +326,26 @@
 
       <section class="quote-section quote-3-section">
         <svg id="quote-3" class="quote-svg" viewBox="0 0 767 779" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <text id="q3-credit" class="quote-text quote-credit" transform="translate(491 756.708) rotate(-60)" xml:space="preserve" style="white-space: pre" font-size="36" letter-spacing="0em"><tspan x="1.8667" y="34.366">-leonardo da vinci</tspan></text>
-          <path id="q3-polygon-2" class="q3-poly" d="M332.762 479.282L332.758 479.275L223.039 289.378L745.208 289.353L484.101 741.604L332.762 479.282Z" />
-          <path id="q3-polygon-1" class="q3-poly" d="M434.098 287.329L434.102 287.336L543.82 477.233L21.6512 477.258L282.758 25.0068L434.098 287.329Z"/>
-          <path id="q3-cutter-2" class="quote-cutters" d="M449 507L326 507L326 620L449 620L449 507Z"/>
-          <rect id="q3-cutter-1" class="quote-cutters" width="123" height="113" transform="matrix(-1 -8.74228e-08 -8.74228e-08 1 450 146)"/>
-          <text id="q3-l2" class="quote-text" xml:space="preserve" style="white-space: pre" font-size="72" letter-spacing="0em"><tspan x="6.35156" y="587.732">ULTIMATE SOPHISTICATION&#x201d;</tspan></text>
-          <text id="q3-l1" class="quote-text" fill="white" xml:space="preserve" style="white-space: pre" font-size="72" letter-spacing="0em"><tspan x="303.645" y="227.232">&#x201c;SIMPLICITY IS THE</tspan></text>
-          </svg>
+          <text id="q3-credit" class="quote-text quote-credit" transform="translate(491 756.708) rotate(-60)"
+            xml:space="preserve" style="white-space: pre" font-size="36" letter-spacing="0em">
+            <tspan x="1.8667" y="34.366">-leonardo da vinci</tspan>
+          </text>
+          <path id="q3-polygon-2" class="q3-poly"
+            d="M332.762 479.282L332.758 479.275L223.039 289.378L745.208 289.353L484.101 741.604L332.762 479.282Z" />
+          <path id="q3-polygon-1" class="q3-poly"
+            d="M434.098 287.329L434.102 287.336L543.82 477.233L21.6512 477.258L282.758 25.0068L434.098 287.329Z" />
+          <path id="q3-cutter-2" class="quote-cutters" d="M449 507L326 507L326 620L449 620L449 507Z" />
+          <rect id="q3-cutter-1" class="quote-cutters" width="123" height="113"
+            transform="matrix(-1 -8.74228e-08 -8.74228e-08 1 450 146)" />
+          <text id="q3-l2" class="quote-text" xml:space="preserve" style="white-space: pre" font-size="72"
+            letter-spacing="0em">
+            <tspan x="6.35156" y="587.732">ULTIMATE SOPHISTICATION&#x201d;</tspan>
+          </text>
+          <text id="q3-l1" class="quote-text" fill="white" xml:space="preserve" style="white-space: pre" font-size="72"
+            letter-spacing="0em">
+            <tspan x="303.645" y="227.232">&#x201c;SIMPLICITY IS THE</tspan>
+          </text>
+        </svg>
       </section>
 
       <section id="contact" class="contact-section">
