project/about paragraph language tweaks

--- a/index.html
+++ b/index.html
@@ -124,11 +124,11 @@
           <div class="project-content">
             <div class="project-body">
               <h2 class="project-title">My Portfolio Website</h2>
-              <p>A Responsive website that utilizes the power of Greensock (GSAP) & ScrollMagic powered animations.</p>
+              <p>A Responsive website that utilizes the power of creative SVG, Greensock (GSAP) & ScrollMagic powered animations to provide a fluid UI.</p>
             </div>
             <div class="project-footer">
-              <a href="#">Case Study</a> // <a href="https://github.com/SadboiTay/portfolio2.0" target="_blank">GitHub
-                Repo</a>
+              <!-- <a href="#">Case Study</a> //  -->
+              <a href="https://github.com/SadboiTay/portfolio2.0" target="_blank">View Code</a>
             </div>
           </div>
           <div class="project-revealer"></div>
@@ -141,9 +141,9 @@
               <p>Pass-stache is a powerful password storage tool, built with a team of 4 other developers.</p>
             </div>
             <div class="project-footer">
-              <a href="https://thawing-temple-09016.herokuapp.com/" target="_blank">Visit Website</a> // <a
-                href="https://github.com/andydhpkp/pass-stache" target="_blank">GitHub
-                Repo</a>
+              <a href="https://thawing-temple-09016.herokuapp.com/" target="_blank">Visit Website</a> //
+              <a
+                href="https://github.com/andydhpkp/pass-stache" target="_blank">View Code</a>
             </div>
           </div>
           <div class="project-revealer"></div>
@@ -158,8 +158,7 @@
             </div>
             <div class="project-footer">
               <a href="https://obscure-peak-50471.herokuapp.com/" target="_blank">Visit Website</a> // <a
-                href="https://github.com/SadboiTay/tech-blog" target="_blank">GitHub
-                Repo</a>
+                href="https://github.com/SadboiTay/tech-blog" target="_blank">View Code</a>
             </div>
           </div>
           <div class="project-revealer"></div>
@@ -174,7 +173,7 @@
             </div>
             <div class="project-footer">
               <a href="https://sadboitay.github.io/weather-dashboard/" target="_blank">Visit Website</a> // <a
-                href="https://github.com/SadboiTay/weather-dashboard" target="_blank">GitHub Repo</a>
+                href="https://github.com/SadboiTay/weather-dashboard" target="_blank">View Code</a>
             </div>
           </div>
           <div class="project-revealer"></div>
@@ -189,7 +188,7 @@
             </div>
             <div class="project-footer">
               <a href="https://austinxewell.github.io/git-n-shape/" target="_blank">Visit Website</a> // <a
-                href="https://github.com/austinxewell/git-n-shape" target="_blank">GitHub Repo</a>
+                href="https://github.com/austinxewell/git-n-shape" target="_blank">View Code</a>
             </div>
           </div>
           <div class="project-revealer"></div>
@@ -204,8 +203,9 @@
               </p>
             </div>
             <div class="project-footer">
-              <a href="#">Video Guide</a> // <a href="https://github.com/SadboiTay/team-profile-generator"
-                target="_blank">GitHub Repo</a>
+              <!-- <a href="#">video demonstration</a> //  -->
+              <a href="https://github.com/SadboiTay/team-profile-generator"
+                target="_blank">View Code</a>
             </div>
           </div>
           <div class="project-revealer"></div>
@@ -221,7 +221,7 @@
             </div>
             <div class="project-footer">
               <a href="https://sadboitay.github.io/work-day-scheduler/" target="_blank">Visit Website</a> // <a
-                href="https://github.com/SadboiTay/work-day-scheduler" target="_blank">GitHub Repo</a>
+                href="https://github.com/SadboiTay/work-day-scheduler" target="_blank">View Code</a>
             </div>
           </div>
           <div class="project-revealer"></div>
@@ -235,8 +235,9 @@
                 professional README document, letting developers focus more on their code.</p>
             </div>
             <div class="project-footer">
-              <a href="#">Video Guide</a> // <a href="https://github.com/SadboiTay/Professional-README-Generator"
-                target="_blank">GitHub Repo</a>
+              <!-- <a href="#">video demonstration</a> //  -->
+              <a href="https://github.com/SadboiTay/Professional-README-Generator"
+                target="_blank">View Code</a>
             </div>
           </div>
           <div class="project-revealer"></div>
@@ -252,7 +253,7 @@
             </div>
             <div class="project-footer">
               <a href="https://sadboitay.github.io/code-quiz/" target="_blank">Visit Website</a> // <a
-                href="https://github.com/SadboiTay/code-quiz" target="_blank">GitHub Repo</a>
+                href="https://github.com/SadboiTay/code-quiz" target="_blank">View Code</a>
             </div>
           </div>
           <div class="project-revealer"></div>
@@ -306,11 +307,10 @@
           <div class="about-text1">
             I'm a full stack web developer and recent graduate from the Universty of Utah's coding bootcamp. My place in
             the
-            world seems to be at the junction creativity and logic.
+            world seems to be at the junction of creativity and logic.
           </div>
           <div class="about-text2">
-            Whether it's breathing new life into legacy content or building applications from scratch, I tackle every
-            project with eagerness and enthusiasm.
+            If you're a hiring manager seeking quality developers, I'd love to hear about your opportunities. Send me an email and let's get in touch.
           </div>
           <div class="about-text3">
             I am proficient with a range of front and back-end languages, tools and frameworks like HTML5, CSS3,
@@ -319,7 +319,7 @@
           </div>
           <div class="about-text4">
             Outside the world of programming you might find me studying my favorite chess openings, entertaining my two
-            crazy doggos, traveling with my wife, or getting giddy over a large plate of sushi.
+            crazy doggos, traveling with my wife, jamming to my favorite dance music, or getting giddy over a large plate of sushi.
           </div>
         </div>
       </section>
