--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   <main>
     <div class="main-wrap">
       <section class="jumbotron">
-        <h1 class="intro-text">Hey! I'm Taylor. I build interactive websites for humans.</h1>
+        <h1 class="intro-text">Hey! I'm Taylor. I'm likely the new Junior Dev you're looking for.</h1>
 
         <svg class="jumbo-icosa" viewBox="0 0 393 447" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path
