first project image!

--- a/index.html
+++ b/index.html
@@ -138,6 +138,11 @@
           <div class="project-content">
             <div class="project-body">
               <h2 class="project-title">Password Management Application</h2>
+
+              <div class="project-img-wrap">
+                <img src="./assets/images/mockups/half-pass-stache-iphone-mockup.png " alt="">
+              </div>
+
               <p>Pass-stache is a powerful password storage tool, built with a team of 4 other developers.</p>
             </div>
             <div class="project-footer">
