update email address

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   </section>
 
   <div class="arrow-cta-wrap">
-    <a href="mailto:tg.hakes@gmail.com">
+    <a href="mailto:hello@taylorhakes.dev">
       <svg id="cta-btn" viewBox="0 0 153 174" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path id="cta-btn-polygon"
           d="M4.32202 127.563V45.1698L76.7006 4.02717L148.896 45.1673V128.113L76.5284 169.069L4.32202 127.563Z" />
@@ -356,8 +356,8 @@
       <section id="contact" class="contact-section">
         <h1 class="section-title">Get in Touch</h1>
         <div class="email-block">
-          <a class="email-address" href="mailto:tg.hakes@gmail.com">hello@</a><br>
-          <a class="email-address email-domain" href="mailto:tg.hakes@gmail.com">taylorhakes.com</a>
+          <a class="email-address" href="mailto:hello@taylorhakes.dev">hello@</a><br>
+          <a class="email-address email-domain" href="mailto:hello@taylorhakes.dev">taylorhakes.dev</a>
         </div>
       </section>
     </div>
