--- a/index.html
+++ b/index.html
@@ -138,11 +138,9 @@
           <div class="project-content">
             <div class="project-body">
               <h2 class="project-title">Password Management Application</h2>
-
               <div class="project-img-wrap">
                 <img src="./assets/images/mockups/half-pass-stache-iphone-mockup.png " alt="">
               </div>
-
               <p>Pass-stache is a powerful password storage tool, built with a team of 4 other developers.</p>
             </div>
             <div class="project-footer">
@@ -158,7 +156,10 @@
           <div class="project-content">
             <div class="project-body">
               <h2 class="project-title">Blog/Social Application</h2>
-              <p>Solo built, full stack site where users can view and create blog posts and interact via the comments.
+              <div class="project-img-wrap">
+                <img src="./assets/images/mockups/half-tech-blog-iphone-mockup 1.png" alt="">
+              </div>
+              <p>Solo built, full stack site where users can view and create blog posts and interact via the comments. 
               </p>
             </div>
             <div class="project-footer">
@@ -173,6 +174,9 @@
           <div class="project-content">
             <div class="project-body">
               <h2 class="project-title">Live Weather Dashboard</h2>
+              <div class="project-img-wrap">
+                <img src="./assets/images/mockups/half-weatherdash-iphone-mockup 1.png" alt="">
+              </div>
               <p>A one-page site built with jQuery and Bootstrap that uses the OpenWeather API to retrieve forecast data
                 in specific cities. Local storage saves a search history.</p>
             </div>
@@ -188,6 +192,9 @@
           <div class="project-content">
             <div class="project-body">
               <h2 class="project-title">Health/Fitness Plan Application</h2>
+              <div class="project-img-wrap">
+                <img src="./assets/images/mockups/half-gitnshape-iphone-mockup 1.png" alt="">
+              </div>
               <p>Git N Shape is a health and fitness jump starter app that generates tailored workout and nutrition
                 plans for users. Built with a team of 3 other developers.</p>
             </div>
