first laptop-mockup

--- a/index.html
+++ b/index.html
@@ -124,7 +124,8 @@
           <div class="project-content">
             <div class="project-body">
               <h2 class="project-title">My Portfolio Website</h2>
-              <p>A Responsive website that utilizes the power of creative SVG, Greensock (GSAP) & ScrollMagic powered animations to provide a fluid UI.</p>
+              <p>A Responsive website that utilizes the power of creative SVG, Greensock (GSAP) & ScrollMagic powered
+                animations to provide a fluid UI.</p>
             </div>
             <div class="project-footer">
               <!-- <a href="#">Case Study</a> //  -->
@@ -139,14 +140,13 @@
             <div class="project-body">
               <h2 class="project-title">Password Management Application</h2>
               <div class="project-img-wrap">
-                <img src="./assets/images/mockups/half-pass-stache-iphone-mockup.png " alt="">
+                <img class="iphone-mockup" src="./assets/images/mockups/half-pass-stache-iphone-mockup.png " alt="">
               </div>
               <p>Pass-stache is a powerful password storage tool, built with a team of 4 other developers.</p>
             </div>
             <div class="project-footer">
               <a href="https://thawing-temple-09016.herokuapp.com/" target="_blank">Visit Website</a> //
-              <a
-                href="https://github.com/andydhpkp/pass-stache" target="_blank">View Code</a>
+              <a href="https://github.com/andydhpkp/pass-stache" target="_blank">View Code</a>
             </div>
           </div>
           <div class="project-revealer"></div>
@@ -157,9 +157,9 @@
             <div class="project-body">
               <h2 class="project-title">Blog/Social Application</h2>
               <div class="project-img-wrap">
-                <img src="./assets/images/mockups/half-tech-blog-iphone-mockup 1.png" alt="">
+                <img class="iphone-mockup" src="./assets/images/mockups/half-tech-blog-iphone-mockup 1.png" alt="">
               </div>
-              <p>Solo built, full stack site where users can view and create blog posts and interact via the comments. 
+              <p>Solo built, full stack site where users can view and create blog posts and interact via the comments.
               </p>
             </div>
             <div class="project-footer">
@@ -175,7 +175,7 @@
             <div class="project-body">
               <h2 class="project-title">Live Weather Dashboard</h2>
               <div class="project-img-wrap">
-                <img src="./assets/images/mockups/half-weatherdash-iphone-mockup 1.png" alt="">
+                <img class="iphone-mockup" src="./assets/images/mockups/half-weatherdash-iphone-mockup 1.png" alt="">
               </div>
               <p>A one-page site built with jQuery and Bootstrap that uses the OpenWeather API to retrieve forecast data
                 in specific cities. Local storage saves a search history.</p>
@@ -193,7 +193,7 @@
             <div class="project-body">
               <h2 class="project-title">Health/Fitness Plan Application</h2>
               <div class="project-img-wrap">
-                <img src="./assets/images/mockups/half-gitnshape-iphone-mockup 1.png" alt="">
+                <img class="iphone-mockup" src="./assets/images/mockups/half-gitnshape-iphone-mockup 1.png " alt="">
               </div>
               <p>Git N Shape is a health and fitness jump starter app that generates tailored workout and nutrition
                 plans for users. Built with a team of 3 other developers.</p>
@@ -210,20 +210,22 @@
           <div class="project-content">
             <div class="project-body">
               <h2 class="project-title">Automatic Website Generator</h2>
+              <div class="project-img-wrap">
+                <img class="laptop-mockup" src="./assets/images/mockups/team-profile-gen-laptop-mockup.png" alt="">
+              </div>
               <p>Quickly generate a website displaying your team of employees through a command line app built with
                 Node.js. Created with a focus on object oriented programming and test driven development.
               </p>
             </div>
             <div class="project-footer">
               <!-- <a href="#">video demonstration</a> //  -->
-              <a href="https://github.com/SadboiTay/team-profile-generator"
-                target="_blank">View Code</a>
+              <a href="https://github.com/SadboiTay/team-profile-generator" target="_blank">View Code</a>
             </div>
           </div>
           <div class="project-revealer"></div>
         </div>
 
-        <div class="project-card">
+        <!-- <div class="project-card">
           <div class="project-content">
             <div class="project-body">
               <h2 class="project-title">Daily Calendar Application</h2>
@@ -234,6 +236,25 @@
             <div class="project-footer">
               <a href="https://sadboitay.github.io/work-day-scheduler/" target="_blank">Visit Website</a> // <a
                 href="https://github.com/SadboiTay/work-day-scheduler" target="_blank">View Code</a>
+            </div>
+          </div>
+          <div class="project-revealer"></div>
+        </div> -->
+
+        <div class="project-card">
+          <div class="project-content">
+            <div class="project-body">
+              <h2 class="project-title">Coding Quiz Application</Q></h2>
+              <div class="project-img-wrap">
+                <img class="iphone-mockup" src="./assets/images/mockups/half-coding-quiz-iphone-mockup 1.png" alt="">
+              </div>
+              <p>Test your knowledgee with a timed JavaScript quiz. Wrong answers dock your time and decrease your
+                score.
+              </p>
+            </div>
+            <div class="project-footer">
+              <a href="https://sadboitay.github.io/code-quiz/" target="_blank">Visit Website</a> // <a
+                href="https://github.com/SadboiTay/code-quiz" target="_blank">View Code</a>
             </div>
           </div>
           <div class="project-revealer"></div>
@@ -248,24 +269,7 @@
             </div>
             <div class="project-footer">
               <!-- <a href="#">video demonstration</a> //  -->
-              <a href="https://github.com/SadboiTay/Professional-README-Generator"
-                target="_blank">View Code</a>
-            </div>
-          </div>
-          <div class="project-revealer"></div>
-        </div>
-
-        <div class="project-card">
-          <div class="project-content">
-            <div class="project-body">
-              <h2 class="project-title">Coding Quiz Application</Q></h2>
-              <p>Test your knowledgee with a timed JavaScript quiz. Wrong answers dock your time and decrease your
-                score.
-              </p>
-            </div>
-            <div class="project-footer">
-              <a href="https://sadboitay.github.io/code-quiz/" target="_blank">Visit Website</a> // <a
-                href="https://github.com/SadboiTay/code-quiz" target="_blank">View Code</a>
+              <a href="https://github.com/SadboiTay/Professional-README-Generator" target="_blank">View Code</a>
             </div>
           </div>
           <div class="project-revealer"></div>
@@ -322,7 +326,8 @@
             world seems to be at the junction of creativity and logic.
           </div>
           <div class="about-text2">
-            If you're a hiring manager seeking quality developers, I'd love to hear about your opportunities. Send me an email and let's get in touch.
+            If you're a hiring manager seeking quality developers, I'd love to hear about your opportunities. Send me an
+            email and let's get in touch.
           </div>
           <div class="about-text3">
             I am proficient with a range of front and back-end languages, tools and frameworks like HTML5, CSS3,
@@ -331,7 +336,8 @@
           </div>
           <div class="about-text4">
             Outside the world of programming you might find me studying my favorite chess openings, entertaining my two
-            crazy doggos, traveling with my wife, jamming to my favorite dance music, or getting giddy over a large plate of sushi.
+            crazy doggos, traveling with my wife, jamming to my favorite dance music, or getting giddy over a large
+            plate of sushi.
           </div>
         </div>
       </section>
