--- a/index.html
+++ b/index.html
@@ -264,6 +264,9 @@
           <div class="project-content">
             <div class="project-body">
               <h2 class="project-title">README Generator</h2>
+              <div class="project-img-wrap">
+                <img class="laptop-mockup" src="./assets/images/mockups/readme-gen-laptop-mockup.png" alt="">
+              </div>
               <p>A Node.js command line app that gathers prompted information from the user to dynamically generate a
                 professional README document, letting developers focus more on their code.</p>
             </div>
